--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		
         <script src="/js/jquery.js"></script>
 		<script src="/js/app.js"></script>
+        <script src="/js/solver.js"></script>
         <script src="/js/canvas.js"></script>
         <script src="/js/tiles.js"></script>
         <script src="/js/state.js"></script>
         <script src="/js/runStates.js"></script>
+        <script src="/js/position.js"></script>
         <script src="/js/notification.js"></script>
 	</head>
     <body>
@@ -32,7 +34,6 @@
         </div>
         <div class="content">
             <canvas id="canvas"></canvas>
-            <div id="toast"></div>
         </div>
     </body>
 </HTML>
