Added input validation, added average text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="/js/state.js"></script>
         <script src="/js/runStates.js"></script>
         <script src="/js/position.js"></script>
+        <script src="/js/input.js"></script>
         <script src="/js/notification.js"></script>
 	</head>
     <body>
@@ -30,6 +31,7 @@
                     <label for="defaultTiles">Starting tiles:</label>
                 <input class="form-control" id="defaultTiles" type="number"></input>
                 <button class="btn btn-default" id="solve">Solve</button>
+                <div id="average" style="margin-left: 10px"></div>
             </div>
         </div>
         <div class="content">
